--- a/_config.yml
+++ b/_config.yml
@@ -21,13 +21,13 @@
 title: Hello there
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  yay!! citations?user=KwgL380AAAAJ&hl=en&oi=ao +1
+  yay!! Did it work???
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zek3r
 github_username:  zek3r
 gs_link: >- 
-    yay
+    citations?user=KwgL380AAAAJ&hl=en&oi=ao
 gs_title: E. Williams
 
 # Build settings
