--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Hello there
 email: your-email@example.com
 description: >- # this means to ignore newlines until "baseurl:"
-  yay!! Did it work????
+  yay!! Did it work?
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zek3r
