--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Hello there
-email: your-email@example.com
+email: ezekiel <dot> williams <at> mila.quebec
 description: >- # this means to ignore newlines until "baseurl:"
   working....
 baseurl: "" # the subpath of your site, e.g. /blog
