--- a/_config.yml
+++ b/_config.yml
@@ -19,7 +19,8 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Hello there
-email: ezekiel <dot> williams <at> mila.quebec
+email: >- 
+    ezekiel <dot> williams <at> mila.quebec
 description: >- # this means to ignore newlines until "baseurl:"
   working....
 baseurl: "" # the subpath of your site, e.g. /blog
