--- a/_config.yml
+++ b/_config.yml
@@ -21,7 +21,7 @@
 title: Computational Cognition
 email: yes
 description: >- # this means to ignore newlines until "baseurl:"
-  working....
+  building site...
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zek3r
