--- a/_config.yml
+++ b/_config.yml
@@ -19,6 +19,7 @@
 # in the templates via {{ site.myvariable }}.
 
 title: Computational Cognition
+author: Ezekiel Williams
 email: yes
 description: >- # this means to ignore newlines until "baseurl:"
   building site...
