--- a/_config.yml
+++ b/_config.yml
@@ -33,6 +33,10 @@ gs_title: E. Williams
 theme: minima
 plugins:
   - jekyll-feed
+  
+header_pages:
+  - about.md
+  - blog.md
 
 # Exclude from processing.
 # The following items will not be processed, by default.
