--- a/_config.yml
+++ b/_config.yml
@@ -22,7 +22,7 @@ title: Computational Cognition
 author: Ezekiel Williams
 email: yes
 description: >- # this means to ignore newlines until "baseurl:"
-  building site...
+  This website is my contribution to science communication, a place to discuss my current research, and my means of organizing my thoughts on the topics I am passionate about: mathematics, neuroscience, and artificial intelligence. 
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "" # the base hostname & protocol for your site, e.g. http://example.com
 twitter_username: zek3r
