--- a/_config.yml
+++ b/_config.yml
@@ -31,7 +31,7 @@ gs_title: Publications
 mastodon:
 - username: ezekiel
   instance: fediscience.org
-cv_link: assets/cv_mar23.pdf
+cv_link: assets/cv_current.pdf
 
 # Build settings
 theme: minima
